# rtmdet-finetune-toolkit

./: .gitignore  LICENSE  README.md  analyze_dataset.py  augment_by_size.py  balance_dataset.py  dataset_balancer.yaml  dataset_workflow_config.template.yaml  dataset_workflow_config.yaml  finetune_rtmdet.py  hyperparameter_config.template.yaml  hyperparameter_config.yaml  iperparameter_config.txt  normalize_dataset.py  pyproject.toml  requirements.txt
tools/: extract_weights.py
tools/dataset/: prepare_dataset.py
tools/export/: benchmark_trt.py  export_onnx.py  export_tensorrt.py
tools/export/export_onnx/: export_config.txt  export_onnx.py
tools/export/export_tensorrt/: benchmark_trt.py  export_config.txt  export_tensorrt.py
tools/export_onnx/: export_config.template.yaml  export_config.yaml  export_onnx.py
tools/export_tensorrt/: export_config.yaml  export_tensorrt.py
train_rtmdet/: __init__.py  balancer.py  checkpoint_tools.py  config_loader.py  dataset_workflow_config.py  dimension_augmenter.py  losses.py  metrics.py  normalize.py  pipeline.py  plots.py
train_rtmdet/export/: __init__.py  onnx.py  tensorrt.py
